commit more bootstrap

--- a/html/test.html
+++ b/html/test.html
@@ -6,6 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
+<script>
+    let socker = null;
+
+    document.addEventListener("DOMContentLoaded",function(){
+        socket = new WebSocket("ws://127.0.0.1:8080/ws");
+        
+        socket.onopen = () => {
+            console.log("Sucessfully connected")
+        }
+
+    })
+</script>
 <body>
     
 </body>
